<resources>
    <string name="app_name">KIoskApp</string>
    <string name="welcome_button">Hungry?</string>
    <string name="pay_button">Pay Now</string>
    <string name="menu_screen_header">Clover Burgers menu !!</string>
    <string name="single_menu_screen_header">Selected menu item !!</string>
    <string name="menu_screen_footer">Choose your menu</string>
    <string name="welcome_screen_header">Welcome to Clover Burgers </string>
    <string name="add_items_cart">Add %1$d to cart $ %2$.2f</string>
    <string name="single_menu_price">Price : $ %1$.2f</string>
    <string name="order_screen_header">Your Cart</string>
    <string name="restaurant_name">Clover Cafe !!!</string>
    <string name="order_header">Your order</string>
    <string name="sub_total_text">Subtotal</string>
    <string name="tax_text">Tax</string>
    <string name="total_text">Total</string>
    <string name="menu_price">$ %1$.2f</string>
    <string name="checkout_text">Proceed to Checkout</string>
    <string name="order_quantity">x %1$d</string>
    <string name="order_price">$ %1$.2f</string>
    <string name="tax">$ %1$.2f</string>
    <string name="total">$ %1$.2f</string>
    <string name="choose_extra_menu_text">Choose more items</string>
    <string name="proceed_text">Proceed without selecting</string>
    <string name="back_text">Back</string>
    <string name="pay_success">$ %1$.2f payment successful.
        Thank you for your payment</string>
    <string name="exit">Exit</string>
    <string name="welcome_external_display">Welcome to Clover Cafe</string>
    <string name="kitchen_display">Send Order</string>

    <string name="recognize_file">Recognize File</string>
    <string name="recognize_microphone">Recognize Microphone</string>
    <string name="stop_microphone">Stop Microphone</string>
    <string name="preparing">Preparing the recognizer\n</string>
    <string name="ready">Ready\n</string>
    <string name="failed">Failed to init recognizer %s\n</string>
    <string name="elapsed">Result %s elapsed %d milliseconds\n</string>
    <string name="starting">Starting\n</string>
    <string name="say_something">Say something\n</string>
    <string name="stop_file">Stop File</string>
    <string name="pause">Pause</string>
    <string name="continueRecognition">Continue</string>
</resources>
