<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/order_screen_header"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="16dp"
            android:background="@color/main_green"
            android:paddingTop="16dp"
            android:text="@string/order_header"
            android:textAlignment="center"
            android:textColor="@color/base_button_text_color_selector"
            android:textSize="35dp" />

        <ImageView
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_alignTop="@+id/order_screen_header"
            android:layout_alignRight="@+id/order_screen_header"
            android:src="@drawable/ic_clover_os"
            android:layout_margin="16dp"
            android:tint="@color/white"/>
    </RelativeLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="16dp"
        android:layout_weight="0.1"
        android:text="@string/restaurant_name"
        android:textAlignment="center"
        android:textSize="30dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="16dp"
        android:layout_weight="0.1"
        android:text="@string/order_header"
        android:textAlignment="center"
        android:textSize="30dp"
        android:visibility="gone"/>

    <ListView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/listview_order"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="16dp"
        android:layout_weight="0.15"></ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="16dp"
        android:layout_weight="0.1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:text="@string/sub_total_text"
            android:textSize="30dp" />

        <TextView
            android:id="@+id/subtotal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:textSize="30dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="16dp"
        android:layout_weight="0.1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.65"
            android:text="@string/tax_text"
            android:textSize="30dp" />

        <TextView
            android:id="@+id/tax"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:textSize="30dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="16dp"
        android:layout_weight="0.1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:text="@string/total_text"
            android:textSize="30dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/total"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:textSize="30dp"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:id="@+id/kitchen_display_order"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.025"
        android:text="@string/kitchen_display"
        android:visibility="gone"/>

    <Button
        android:id="@+id/exit_button"
        style="@style/Button"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="0.025"
        android:text="@string/exit"/>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_microphone"
            android:tint="@color/black_80"
            android:layout_alignParentRight="true"
            android:layout_marginRight="32dp"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:layout_weight="0.05"
        android:orientation="horizontal">

        <Button
            android:id="@+id/back_button"
            style="@style/Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_weight="0.025"
            android:text="@string/back_text" />

        <Button
            android:id="@+id/pay"
            style="@style/Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.025"
            android:text="@string/pay_button" />
    </LinearLayout>


</LinearLayout>
